--- a/PROJETOS/01 WEBSITE/index.html
+++ b/PROJETOS/01 WEBSITE/index.html
@@ -20,7 +20,7 @@
         </nav>
         <div class="hero-c">
             <h1>Apredendo construção de sites com Udemy Academy</h1>
-            <p>Sendo assim a contrução de um modelo do site</p>
+            <p>Sendo assim a construção de um modelo do site</p>
         </div>
     </header>
     <main>
