--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -7,8 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animes Informativo</title>
 </head>
-<body>
 
+<header>
+    <div class="alinhar">
+        <h1>Menu Principal</h1>
+    </div>
+</header>
+<body>
+    <div>
+        <nav>
+            <ul>
+                <li>Informações</li>
+                <li>Comédia</li>
+                <li>Drama</li>
+                <li>Romane</li>
+            </ul>
+        </nav>
+    </div>
     <div class="capa_container">
         <img src="capaanimes.jpg"  width="1352px" height="656px"  alt="">
     </div>
