--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -10,41 +10,52 @@
 </head>
 
 <body>
-    <header>
-        <div class="alinhar">
-            <h1>Brasil Animes</h1>
-            <p>Porque animes é para todos</p>
-        </div>
-    </header>
-    <nav>
-        <a href="">Informações</a>
-        <a href="">Comédia</a>
-        <a href="">Drama</a>
-        <a href="">Romance</a>
-    </nav>
 
-    <div=class="margem-corpo">
-        <div class="capa_container">
-            <img src="capaanimes.jpg" width="1352px" height="656px" alt="">
-        </div>
+    <section class="espaco_lados">
+        <header>
+            <div class="alinhar">
+                <h1>Brasil Animes</h1>
+                <p>Porque animes é para todos</p>
+            </div>
+        </header>
+        <nav>
+            <a href="">Informações</a>
+            <a href="">Comédia</a>
+            <a href="">Drama</a>
+            <a href="">Romance</a>
+        </nav>
 
-        <h1>Título Principal do SITE</h1>
-        <br>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa dolore?
-            Non repellendus dolore perferendis veniam necessitatibus
-            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam distinctio.
-            Architecto quis natus eum excepturi placeat recusandaedaa
-            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-        </p>
-    </div>
+        <div=class="margem-corpo">
+
+            <picture class="capa_container">
+                
+                <source media="(max-width:900px)" srcset="menor_animes.png" type="image/png">
+                <source media="(min-width:830px)" srcset="capaanimes.jpg" type="image/png">
+                <img src="capaanimes.jpg" alt="animes">
+
+            </picture>
+
+            <h1>Título Principal do SITE</h1>
+            <br>
+            <br>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
+                dolore?
+                Non repellendus dolore perferendis veniam necessitatibus
+                a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
+                consectetur
+                adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
+                ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
+                laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
+                elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
+                distinctio.
+                Architecto quis natus eum excepturi placeat recusandaedaa
+                olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
+                necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
+                em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
+            </p>
+            </div>
+    </section>
 </body>
 
 </html>
