img e resp arrumados
imagem redimensionada, responsabilidade corrigida

--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -25,17 +25,16 @@
             <a href="">Romance</a>
         </nav>
 
-        <div=class="margem-corpo">
+   
 
             <picture class="capa_container">
-                
-                <source media="(max-width:900px)" srcset="menor_animes.png" type="image/png">
+                <source media="(max-width:680px)" srcset="menor_animes.png" type="image/png">
                 <source media="(min-width:830px)" srcset="capaanimes.jpg" type="image/png">
-                <img src="capaanimes.jpg" alt="animes">
+                <img class="ajustar" src="capaanimes.jpg" alt="animes">
 
             </picture>
 
-            <h1>Título Principal do SITE</h1>
+            <h1>Título Principal do SIT</h1>
             <br>
             <br>
             <p>
@@ -54,7 +53,6 @@
                 necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
                 em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
             </p>
-            </div>
     </section>
 </body>
 
