--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -13,10 +13,13 @@
 
     <section class="espaco_lados">
         <header>
-            <div class="alinhar">
+            <picture>
+                <source media="(max-width:680px)" srcset="menor_animes.png" type="image/png">
+                <source media="(min-width:830px)" srcset="capaanimes.jpg" type="image/png">
+                <img class="ajustar" src="capaanimes.jpg" alt="animes">
                 <h1>Brasil Animes</h1>
                 <p>Porque animes é para todos</p>
-            </div>
+            </picture>
         </header>
         <nav>
             <a href="">Informações</a>
@@ -24,15 +27,6 @@
             <a href="">Drama</a>
             <a href="">Romance</a>
         </nav>
-
-
-
-        <picture class="capa_container">
-            <source media="(max-width:680px)" srcset="menor_animes.png" type="image/png">
-            <source media="(min-width:830px)" srcset="capaanimes.jpg" type="image/png">
-            <img class="ajustar" src="capaanimes.jpg" alt="animes">
-
-        </picture>
 
         <h1 class="titulo_corpo">Título Principal do SIT</h1>
         <br>
