header e inicio do alinhamento
alterações no menu, entendendo os positions

--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -9,99 +9,95 @@
     <title>Animes Informativo</title>
 </head>
 
-<body>
+<body class="espaco_lados">
 
-    <section class="espaco_lados">
-        <header>
-            <picture>
-                <source media="(max-width:680px)" srcset="menor_animes.png" type="image/png">
-                <source media="(min-width:830px)" srcset="capaanimes.jpg" type="image/png">
-                <img class="ajustar" src="capaanimes.jpg" alt="animes">
-                <h1>Brasil Animes</h1>
-                <p>Porque animes é para todos</p>
-            </picture>
-        </header>
+    <div class="ajustar">
+        <img class="imagemcapa" src="capaanimes.jpg" alt="animes">
+        <div class="texto"><p>Animes</p></div>
+    </div>
+
+    <div>
         <nav>
             <a href="">Informações</a>
             <a href="">Comédia</a>
             <a href="">Drama</a>
             <a href="">Romance</a>
         </nav>
+    </div>
 
-        <h1 class="titulo_corpo">Título Principal do SIT</h1>
-        <br>
-        <br>
+    <h1 class="margem_top">Título Principal do SIT</h1>
+    <br>
+    <br>
 
-        <div class="pagina_corpo">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-                dolore?
-                Non repellendus dolore perferendis veniam necessitatibus
-                a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-                consectetur
-                adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-                ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-                laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-                elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-                distinctio.
-                Architecto quis natus eum excepturi placeat recusandaedaa
-                olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-                necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-                em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-            </p>
-            <br>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-                dolore?
-                Non repellendus dolore perferendis veniam necessitatibus
-                a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-                consectetur
-                adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-                ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-                laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-                elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-                distinctio.
-                Architecto quis natus eum excepturi placeat recusandaedaa
-                olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-                necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-                em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-            </p>
-            <br>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-                dolore?
-                Non repellendus dolore perferendis veniam necessitatibus
-                a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-                consectetur
-                adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-                ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-                laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-                elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-                distinctio.
-                Architecto quis natus eum excepturi placeat recusandaedaa
-                olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-                necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-                em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-            </p>
-            <br>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-                dolore?
-                Non repellendus dolore perferendis veniam necessitatibus
-                a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-                consectetur
-                adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-                ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-                laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-                elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-                distinctio.
-                Architecto quis natus eum excepturi placeat recusandaedaa
-                olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-                necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-                em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-            </p>
-        </div>
-    </section>
+    <div class="pagina_corpo">
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
+            dolore?
+            Non repellendus dolore perferendis veniam necessitatibus
+            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
+            consectetur
+            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
+            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
+            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
+            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
+            distinctio.
+            Architecto quis natus eum excepturi placeat recusandaedaa
+            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
+            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
+            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
+        </p>
+        <br>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
+            dolore?
+            Non repellendus dolore perferendis veniam necessitatibus
+            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
+            consectetur
+            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
+            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
+            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
+            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
+            distinctio.
+            Architecto quis natus eum excepturi placeat recusandaedaa
+            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
+            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
+            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
+        </p>
+        <br>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
+            dolore?
+            Non repellendus dolore perferendis veniam necessitatibus
+            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
+            consectetur
+            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
+            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
+            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
+            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
+            distinctio.
+            Architecto quis natus eum excepturi placeat recusandaedaa
+            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
+            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
+            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
+        </p>
+        <br>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
+            dolore?
+            Non repellendus dolore perferendis veniam necessitatibus
+            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
+            consectetur
+            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
+            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
+            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
+            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
+            distinctio.
+            Architecto quis natus eum excepturi placeat recusandaedaa
+            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
+            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
+            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
+        </p>
+    </div>
     <footer>
         <p>Todos os direitos reservados &copy;</p>
     </footer>
