--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -11,9 +11,8 @@
 
 <body class="espaco_lados">
 
-    <div class="ajustar">
+    <div class="div_imagem_capa">
         <img class="imagemcapa" src="capaanimes.jpg" alt="animes">
-        <div class="texto"><p>Animes</p></div>
     </div>
 
     <div>
@@ -25,78 +24,33 @@
         </nav>
     </div>
 
-    <h1 class="margem_top">Título Principal do SIT</h1>
+    <h1 class="ajustar_h1">BRASIL ANIMES</h1>
     <br>
     <br>
 
     <div class="pagina_corpo">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-            dolore?
-            Non repellendus dolore perferendis veniam necessitatibus
-            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-            consectetur
-            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-            distinctio.
-            Architecto quis natus eum excepturi placeat recusandaedaa
-            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-        </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-            dolore?
-            Non repellendus dolore perferendis veniam necessitatibus
-            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-            consectetur
-            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-            distinctio.
-            Architecto quis natus eum excepturi placeat recusandaedaa
-            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-        </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-            dolore?
-            Non repellendus dolore perferendis veniam necessitatibus
-            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-            consectetur
-            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-            distinctio.
-            Architecto quis natus eum excepturi placeat recusandaedaa
-            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-        </p>
-        <br>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sint voluptatibus eius nihil culpa
-            dolore?
-            Non repellendus dolore perferendis veniam necessitatibus
-            a dolorum sunt ratione officiis distinctio aut possimus reprehenderit?Lorem ipsum dolor sit amet
-            consectetur
-            adipisicing elit. Sit eos ipsa voluptas aliquam. In dica
-            ta, earum fugiat animi excepturi porro reiciendis tempore architecto, molestiae aliquid ut, sit sequi
-            laudantium Lorem, ipsum dolor sit amet consectetur adipisicinga
-            elit. Delectus non tempore a ratione expedita at dignissimos, repellendus unde ducimus quisquam
-            distinctio.
-            Architecto quis natus eum excepturi placeat recusandaedaa
-            olor Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus aspernatur, unde consequuntur
-            necessitatibus distinctio doloremque quibusdam error nisi! Vitae r
-            em consequatur eaque doloribus id! Voluptas quo sapiente veritatis odit quas.
-        </p>
+        <article class="art_onepiece">
+            <picture>
+                <source srcset="">
+            </picture>
+            <h2>One Piece</h2>
+            <h3>Sinopse</h3>
+            <p>
+                Gol D. Roger era conhecido como o Rei dos Piratas. Ele conquistou tudo na vida: fortuna, fama e poder.
+                Suas últimas palavras antes de ser executado inspiraram homens do mundo inteiro a se lançarem ao mar
+                : "O meu tesouro? Podem ficar com ele, se quiserem... Mas vão ter que procurá-lo. Deixei tudo naquele
+                lugar!". E assim Roger criou a Grande Era dos Piratas.
+            </p>
+            <br>
+            <p>
+                Passados 22 anos, um garoto chamado Monkey D. Luffy, usuário da Gomu Gomu no Mi, parte em busca do seu
+                sonho:
+                achar o One Piece e se tornar o Rei dos Piratas, que é o título da pessoa que vai conquistar o mundo.
+                Luffy
+                terá de juntar uma tripulação forte no East Blue, o mar mais fraco de todos.
+                Aparecerão muitos inimigos poderosos em seu caminho.
+            </p>
+        </article>
     </div>
     <footer>
         <p>Todos os direitos reservados &copy;</p>
