--- a/EXEMPLOS/02_POSITIONS/index.html
+++ b/EXEMPLOS/02_POSITIONS/index.html
@@ -7,7 +7,8 @@
           height: 300px;
           background-color: green;
           border: 10px solid darkgreen;
-          position: absolute;
+          position: relative;
+          margin-left: 10mm;
           top: 20px;
           bottom: 0;
           z-index: 0;
@@ -17,7 +18,7 @@
           height: 100px;
           background-color: blue;
           border:10px solid darkblue;
-          position: absolute;
+          position: relative;
           top: 25%;
           right: 0;
           z-index: 1;  
@@ -31,11 +32,8 @@
     <title>positions</title>
 </head>
 <body>
-    <div class="box-green">
-        <div class="box-blue"></div>
-    </div>
-
-    <p>texto complementar</p>
+    <div class="box-green"></div>
+    <div class="box-blue"></div>
 
 
 </body>
