hover nos cards, imagens organizadas

--- a/PROJETOS/02 SITE DE ANIME/index.html
+++ b/PROJETOS/02 SITE DE ANIME/index.html
@@ -29,25 +29,24 @@
     <br>
 
 
-    <article class="art_onepiece">
-
-
+    <article class="art_animes">
         <section>
-            
             <div class="container_art">
                 <picture>
-                    <h2>One Piece</h2>
-                    <source media="(max-width: 700px)" srcset="one_piece_caracters_p.jpeg" type="image/jpeg">
+                    <source media="(max-width: 1000px)" srcset="one_piece_caracters_p.jpeg" type="image/jpeg">
                     <img class="imagemcapa" src="one_piece_caracters.jpeg" alt="personagens de one piece">
+                    <h2>One Piece</h2>
                 </picture>
-                <p class="texto_art">
-                    Passados 22 anos, um garoto chamado Monkey D. Luffy, usuário <br>
-                    da Gomu Gomu no Mi, parte em busca do seu sonho: achar o <br>
-                    One Piece e se tornar o Rei dos Piratas, que é o título <br>
-                    da pessoa que vai conquistar o mundo. Luffy terá de juntar uma <br>
-                    tripulação forte no East Blue, o mar mais fraco de todos <br>
-                    Aparecerão muitos inimigos poderosos em seu caminho.
-                </p>
+                <picture>
+                    <source media="(max-width: 1000px)" srcset="dragonballz_p.jpg" type="image/jpg">
+                    <img class="imagemcapa" src="dragonballz.jpg" alt="personagens dragon ball Z">
+                    <h2>Dragon Ball Z</h2>
+                </picture>
+                <picture>
+                    <source media="(max-width: 1000px)" srcset="hunterxhunter_p.jpg" type="image/jpg">
+                    <img class="imagemcapa" src="hunterxhunter.jpg" alt="personagens dragon ball Z">
+                    <h2>Hunter x Hunter</h2>
+                </picture> 
             </div>
         </section>
     </article>
