--- a/PROJETOS/03_STRATA/index.html
+++ b/PROJETOS/03_STRATA/index.html
@@ -74,7 +74,7 @@
                 <a href="fulls/05.jpg">
                 <img src="thumbs/05.jpg" alt="">
                 <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+                <p>Lorem ipsum dolor sita amet consectetur adipisicing elit.  
             </article>
 
             <article class="recent-works-card">
