implementação do código

--- a/PROJETOS/03_STRATA/index.html
+++ b/PROJETOS/03_STRATA/index.html
@@ -41,47 +41,47 @@
         </section>
         <section class="main-content-section">
             <h3>Recent Works</h3>
-            
+
             <article class="recent-works-card">
                 <a href="fulls/01.jpg">
-                <img src="thumbs/01.jpg" alt="">
-                <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+                    <img src="thumbs/01.jpg" alt="">
+                    <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </article>
 
             <article class="recent-works-card">
                 <a href="fulls/02.jpg">
-                <img src="thumbs/02.jpg" alt="">
-                <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+                    <img src="thumbs/02.jpg" alt="">
+                    <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </article>
 
             <article class="recent-works-card">
                 <a href="fulls/03.jpg">
-                <img src="thumbs/03.jpg" alt="">
-                <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+                    <img src="thumbs/03.jpg" alt="">
+                    <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </article>
 
             <article class="recent-works-card">
                 <a href="fulls/04.jpg">
-                <img src="thumbs/04.jpg" alt="">
-                <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+                    <img src="thumbs/04.jpg" alt="">
+                    <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </article>
 
             <article class="recent-works-card">
                 <a href="fulls/05.jpg">
-                <img src="thumbs/05.jpg" alt="">
-                <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sita amet consectetur adipisicing elit.  
+                    <img src="thumbs/05.jpg" alt="">
+                    <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
+                    <p>Lorem ipsum dolor sita amet consectetur adipisicing elit.
             </article>
 
             <article class="recent-works-card">
                 <a href="fulls/06.jpg">
-                <img src="thumbs/06.jpg" alt="">
-                <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  
+                    <img src="thumbs/06.jpg" alt="">
+                    <p class="recent-works-card-title">Mollitia deleniti amet veritatis</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </article>
 
             <a href="#" title="Veja Mais" class="button-default">Veja o potifolio completo</a>
@@ -90,7 +90,11 @@
 
         <section class="main-content-section">
             <h3>Get in touch</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus libero sed rem vero quas amet odit consequuntur minus fuga tempore, sequi animi omnis, magnam distinctio maiores, incidunt reprehenderit ratione enim?</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus libero sed rem vero quas amet
+                odit consequuntur minus fuga tempore, sequi animi omnis, magnam distinctio maiores, incidunt
+                reprehenderit ratione enim?</p>
+
             <form action="#" method="post">
                 <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome">
@@ -119,6 +123,127 @@
                 </p>
             </address>
         </section>
+
+        <section class="main-content-section">
+            <h3>Elements</h3>
+            <h4>Text</h4>
+            <p>
+                Lorem ipsum dolor <b>amet</b> consectetur <strong>adipisicing</strong> elit. Modi aliquam totam quam,
+                fugiat optio quis
+                itaque dolorem, <i> magnam recusandae</i> quasi <sup>tempore sed sint</sup> perferendis possimus? Ea
+                expedita quo Lorem
+                ipsum <sub>dolor</sub> sit, amet <u>consectetur </u> adipisicing elit.
+                <code> print("Hellow Word"); int =10, </code> deleniti ducimus totam iure minima mollitia re
+                prehenderit <a href="#">link</a>
+            </p>
+
+            <blockquote cite="http://developer.mozilla.org">
+                <p>Esta é uma citação tirada da
+                    Mozilla Developer Center.</p>
+            </blockquote>
+
+            <p>According to Mozilla's website,
+                <q cite="https://www.mozilla.org/en-US/about/history/details/">Firefox 1.0
+                    was released in 2004 and became a big success.</q>
+            </p>
+
+            <h5>Preformatado</h5>
+            <h4>Listas</h4>
+            <h5>Não ordenada</h5>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+            </ul>
+            <h5>Ordenada</h5>
+            <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+            </ul>
+            <h5>Alternate</h5>
+            <ul class="ul-alternate">
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+                <li>Item 4</li>
+            </ul>
+            <h5>Action</h5>
+            <p>
+                <a href="#" class="button-default">Default</a>
+                <a href="#" class="button-default button-default-stroke">Default</a>
+            </p>
+            <p>
+                <a href="#" class="button-default button-small">Default</a>
+                <a href="#" class="button-default button-default-stroke">Default</a>
+            </p>
+            <p>
+                <a href="#" class="button-default button-full button-small">Default</a>
+                <a href="#" class="button-default button-default-full button-small button-default-stroke">Default</a>
+            </p>
+
+            <h4>Table</h4>
+            <h5>Default</h5>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tfoot>
+                    <tr>
+                        <td colspan="2"></td>
+                        <td>100.00</td>
+                    </tr>
+                </tfoot>
+                <tbody>
+                    <tr>
+                        <td>Item One</td>
+                        <td>Ante turpis integer aliquet porttitor.</td>
+                        <td>29.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Two</td>
+                        <td>Vis ac commodo adipiscing arcu aliquet.</td>
+                        <td>19.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Three</td>
+                        <td> Morbi faucibus arcu accumsan lorem.</td>
+                        <td>29.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Four</td>
+                        <td>Vitae integer tempus condimentum.</td>
+                        <td>19.99</td>
+                    </tr>
+                    <tr>
+                        <td>Item Five</td>
+                        <td>Ante turpis integer aliquet porttitor.</td>
+                        <td>29.99</td>
+                    </tr>
+                </tbody>
+                <h5>button</button></h5>
+                <p>
+                    <a href="#" class="button-default">Default</a>
+                    <a href="#" class="button-default button-default-stroke">Default</a>
+                </p>
+                <p>
+                    <a href="#" class="button-default button-small">Default</a>
+                    <a href="#" class="button-default button-default-stroke">Default</a>
+                </p>
+                <p>
+                    <a href="#" class="button-default button-full button-small">Default</a>
+                    <a href="#" class="button-default button-default-full button-small button-default-stroke">Default</a>
+                </p>
+            </table>
+        </section>
+
     </main>
     <footer class="main-footer"></footer>
 
